added gh-pages package to help with deployment

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
         "build": "rimraf dist && webpack --config webpack/webpack.prod.js",
         "bundle": "npm run build",
         "preview": "serve dist",
-        "util:check": "prettier --check src/scripts/**",
-        "util:format": "prettier --write src/scripts/**"
+        "util:check": "prettier --check src/**",
+        "util:format": "prettier --write src/**",
+        "deploy": "gh-pages -d dist"
     },
     "alias": {
         "@/": "./src"
@@ -39,6 +40,7 @@
         "copy-webpack-plugin": "^10.1.0",
         "eslint": "^8.42.0",
         "eslint-plugin-unused-imports": "^2.0.0",
+        "gh-pages": "^5.0.0",
         "html-webpack-plugin": "^5.5.0",
         "javascript-obfuscator": "^4.0.0",
         "prettier": "^2.5.1",
